<resources>
    <string name="app_name">DrLocator</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click here to login</string>
    <string name="click_to_register">Click here to register</string>
    <string name="logout">Logout</string>
    <string name="welcome">Welcome to our app!</string>
    <string name="RegisterHere">Please register new account</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="about_us">About us</string>
    <string name="profile">Profile</string>
    <string name="clinic_near_me">Clinic near me</string>
    <string name="current_location">Current Location</string>
    <string name="header_title">Clinic Finder Application</string>
    <string name="username">Username</string>
    <string name="title_activity_current_location">CurrentLocation</string>
    <string name="title_activity_clinic_near_me">ClinicNearMe</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_homepage">HomepageActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="greeting">Meet our team members! We are from Group 8 CSC2405A consists of 4 students!</string>
    <string name="find_your_nearest_clinic">Find the nearest clinic near you!</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>